--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="setor">Carlos Eduardo Sert Ferreira</h1>
     </header>
          <figure>
-            <img src="figs\PFP.jpg" alt="Foto de perfil" width="100">
+            <img src="PFP.jpg" alt="Foto de perfil" width="100">
             <figcaption>"Profile Picture"</figcaption>
         </figure>
         <nav>
@@ -30,7 +30,7 @@
     <section>
         <h2 class="setor">ODS that I intend to contribute</h2>
         <figure>
-            <img src="figs\ODS.png" alt="ods" width="100">
+            <img src="ODS.png" alt="ods" width="100">
             <figcaption>"ODS: Quality Education"</figcaption>
         </figure>
     </section>        
@@ -82,3 +82,4 @@
 
 
 </html> 
+
